added/updated: input styling, pagination

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,32 +10,36 @@ a {
   transition: 0.4s;
 }
 
-  a:hover {
-    color: black;
-  }
+a:hover {
+  color: black;
+}
 
-a.button, input[type=submit] {
+a.button,
+.input-submit {
   color: white;
   background: #019875;
   font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
   padding: 10px 14px 12px;
   font-size: 14px;
-  border-radius: 2px;
+  font-weight: bold;
+  border-radius: 4px;
   cursor: pointer;
 }
 
-form a.button, input[type=submit] {
+form a.button,
+.input-submit {
   margin-left: 140px;
   transition: 0.4s;
 }
 
-input[type=submit] {
+.input-submit {
   border: 0;
 }
 
-  a.button:hover, input[type=submit]:hover {
-    background-color: #01b189;
-  }
+a.button:hover,
+.input-submit:hover {
+  background-color: #01b189;
+}
 
 p {
   margin: 20px auto;
@@ -54,7 +58,7 @@ h2 {
 }
 
 th {
-  border-bottom: 2px solid #D8B493;
+  border-bottom: 2px solid #d8b493;
   text-align: left;
   padding: 5px 20px 5px 10px;
 }
@@ -64,7 +68,7 @@ tr {
 }
 
 tr:nth-child(2n) {
-  background: #E7E7E7;
+  background: #e7e7e7;
 }
 
 td {
@@ -82,16 +86,54 @@ input {
   padding: 10px;
   font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
   font-size: 14px;
-  border-radius: 2px;
-  border-color: #E7E7E7;
+  border-radius: 4px;
+  border-color: #e7e7e7;
   transition: 0.4s;
 }
 
-input[type=text] {
+input[type="text"] {
   margin-left: 7px;
   width: 300px;
 }
 
 .error {
   color: rgb(236, 15, 15);
+}
+/* **************** */
+
+.pagination {
+  display: flex;
+  justify-content: center;
+}
+.pagination__item {
+  margin: 20px 5px;
+}
+.content-width {
+  width: fit-content;
+}
+
+.block {
+  /* Inline elements, such as <a>, 
+  need to be set to block to be able to scale. */
+  display: block;
+}
+a.active {
+  background-color: #01b189;
+  transform: scale(1.2);
+}
+.main-nav {
+  display: flex;
+  justify-content: space-between;
+}
+.search__input {
+  border: 2px solid #019875;
+  border-right: none;
+  border-radius: 4px 0 0 4px;
+  font-size: 12px;
+}
+.search__submit {
+  /* Overides margin set elsewhere */
+  margin-left: 0px;
+
+  border-radius: 0 4px 4px 0;
 }
