added class of input-submit

--- a/views/books/new-book.pug
+++ b/views/books/new-book.pug
@@ -18,7 +18,7 @@ block content
       label(for='year') Year
       input(name='year', type='text', id='year' value='')
     p
-      input(type='submit', value='Create New Book')
+      input(class='input-submit', type='submit', value='Create New Book')
 
     p
       a(class='button', href='/books') Cancel
