--- a/views/books/update-book.pug
+++ b/views/books/update-book.pug
@@ -19,7 +19,7 @@ block content
       label(for='year') Year
       input(name='year', type='text', id='year' value=`${year}`)
     p
-      input(type='submit', value='Update Book')
+      input(class='input-submit', type='submit', value='Update Book')
 
   form(method='post', action=`/books/${id}/delete`, onsubmit="return confirm('Do you really want to delete this book?')")
 
@@ -27,4 +27,4 @@ block content
       a(class='button', href='/books') Cancel
 
     p
-      input(type='submit', value='Delete Book')
+      input(class='input-submit', type='submit', value='Delete Book')
