--- a/views/books/page-not-found.pug
+++ b/views/books/page-not-found.pug
@@ -1,1 +1,9 @@
 extends ../layout
+
+block content
+  h1 Page Not Found
+  p Sorry! We couldn't find the page you were looking for.
+  br
+  p
+    a(class='button', href='/books') Home
+  
