added warning color to delete button

--- a/views/books/update-book.pug
+++ b/views/books/update-book.pug
@@ -33,4 +33,4 @@ block content
       a(class='button', href='/books') Cancel
 
     p
-      input(class='input-submit', type='submit', value='Delete Book')
+      input(class='input-submit warning', type='submit', value='Delete Book')
