--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -104,6 +104,10 @@ input[type="text"] {
   color: rgb(236, 15, 15);
 }
 
+.warning:hover {
+  background-color: rgb(236, 15, 15);
+}
+
 /*******************************/
 /* Main Nav                    */
 /*******************************/
